compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumNameOverride.descriptors.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static @org.jetbrains.annotations.NotNull() EnumNameOverride @org.jetbrains.annotations.NotNull() [] values();//  values()

  @org.jetbrains.annotations.NotNull()
  public static @org.jetbrains.annotations.NotNull() EnumNameOverride valueOf(java.lang.String) throws java.lang.IllegalArgumentException, java.lang.NullPointerException;//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static @org.jetbrains.annotations.NotNull() kotlin.enums.EnumEntries<EnumNameOverride> getEntries();//  getEntries()

  private  EnumNameOverride();//  .ctor()
}